chore: minor cleaning

--- a/lang/lang.common.json
+++ b/lang/lang.common.json
@@ -1,7 +1,7 @@
 {
     "bot": {
-        "name": "My Bot",
-        "author": "My Name"
+        "name": "Markov",
+        "author": "mja00"
     },
     "emojis": {
         "yes": "✅",
