--- a/lang/lang.en-GB.json
+++ b/lang/lang.en-GB.json
@@ -226,6 +226,8 @@
             "BanMembers": "Ban Members",
             "ChangeNickname": "Change Nickname",
             "Connect": "Connect",
+            "CreateEvents": "Create Events",
+            "CreateGuildExpressions": "Create Expressions",
             "CreateInstantInvite": "Create Invite",
             "CreatePrivateThreads": "Create Private Threads",
             "CreatePublicThreads": "Create Public Threads",
@@ -251,12 +253,14 @@
             "RequestToSpeak": "Request to Speak",
             "SendMessages": "Send Messages / Create Posts",
             "SendMessagesInThreads": "Send Messages in Threads / Posts",
+            "SendPolls": "Send Polls",
             "SendTTSMessages": "Send Text-to-Speech Messages",
             "SendVoiceMessages": "Send Voice Messages",
             "Speak": "Speak",
             "Stream": "Video",
             "UseApplicationCommands": "Use Application Commands",
             "UseEmbeddedActivities": "Use Activities",
+            "UseExternalApps": "Use External Apps",
             "UseExternalEmojis": "Use External Emoji",
             "UseExternalSounds": "Use External Sounds",
             "UseExternalStickers": "Use External Stickers",
