chore: implement new discord

--- a/lang/lang.en-GB.json
+++ b/lang/lang.en-GB.json
@@ -248,6 +248,7 @@
             "ModerateMembers": "Timeout Members",
             "MoveMembers": "Move Members",
             "MuteMembers": "Mute Members",
+            "PinMessages": "Pin Messages",
             "PrioritySpeaker": "Priority Speaker",
             "ReadMessageHistory": "Read Message History",
             "RequestToSpeak": "Request to Speak",
